Fixed input line-height issue on IE11

--- a/client/css/app_04_22_2017.css
+++ b/client/css/app_04_22_2017.css
@@ -204,7 +204,7 @@ form input {
 	color: #f1f1f1;
 	font-size: 1em;
 	font-weight: 300;
-	line-height: 50px;
+	height: 50px;
 	margin: 0 0 1em 0;
 	padding: 0 1em;
 	width: 100%;
